--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="title_activity_numerikusterulet">Numerikus területszámítás</string>
     <string name="title_activity_komparalas">Komparálás</string>
     <string name="title_activity_haromszog">"Háromszög "</string>
+    <string name="title_activity_haromszograjz">haromszograjz</string>
+    <string name="title_activity_numerikusteruletrajz">numerikusteruletrajz</string>
 
 </resources>
