--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,10 @@
     <string name="title_activity_haromszograjz">haromszograjz</string>
     <string name="title_activity_numerikusteruletrajz">numerikusteruletrajz</string>
     <string name="title_activity_atvalto">Átváltó</string>
+    //irányszög
+    <string name="iranyszog_kezdopont.y">Kezdőpont Y</string>
+    <string name="iranyszog_kezdopont.x">Kezdőpont X</string>
+    <string name="iranyszog_vegpont.y">Végpont Y</string>
+    <string name="iranyszog_vegpont.x">Végpont X</string>
 
 </resources>
