--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,13 @@
 <resources>
 
     <string name="app_name">Hevesi Toolbox</string>
+    <string name="action_settings">Beállítások</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
     <string name="banner_ad_unit_id">ca-app-pub-4956466865971466/8315826234</string>
 
 
     //Képernyök
+    <string name="title_activity_settings">Beállítások</string>
     <string name="title_activity_iranyszog">Irányszög számítás</string>
     <string name="title_activity_polarispont">Poláris pont számítás</string>
     <string name="title_activity_numerikuster">Numerikus területszámítás</string>
@@ -18,6 +19,11 @@
     <string name="title_activity_numerikusteruletrajz">numerikusteruletrajz</string>
     <string name="title_activity_atvalto">Átváltó</string>
     <string name="title_activity_szelveny">Szelvény kereső</string>
+    <string name="title_activity_metszesek">Metszések</string>
+    <string name="title_activity_tajekozott">Előmetszés tájékozott irányértékkel</string>
+    <string name="title_activity_belsoszoges">Belsőszöges előmetszés</string>
+    <string name="title_activity_iv">Ív metszés</string>
+    <string name="title_activity_hatra">Hátra metszés</string>
 
     //Irányszög
     <string name="iranyszog_kezdopont.y">Kezdőpont Y</string>
@@ -111,4 +117,26 @@
     <string name="menu_vissza">Visszaállítás</string>
     <string name="menu_sugo">Súgó</string>
     <string name="munu_rajz">Rajzolás</string>
+    <string name="title_activity_oldal">Oldal metszés</string>
+
+    //Metszés
+    <string name="iv_sugo">Meghatározza a poligon területét sarokpontjainak koordinátái alapján.
+                                   \n Visszazáráskor számol! </string>
+    <string name="oldal_sugo">Meghatározza a poligon területét sarokpontjainak koordinátái alapján.
+                                   \n Visszazáráskor számol! </string>
+    <string name="belso_sugo">Meghatározza a poligon területét sarokpontjainak koordinátái alapján.
+                                   \n Visszazáráskor számol! </string>
+    <string name="tajekozott_sugo">Meghatározza a poligon területét sarokpontjainak koordinátái alapján.
+                                   \n Visszazáráskor számol! </string>
+    <string name="hatra_sugo">Meghatározza a poligon területét sarokpontjainak koordinátái alapján.
+                                   \n Visszazáráskor számol! </string>
+
+    //Beállítások
+    <string-array name="tizedes">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
 </resources>
